# cargo-feature-demo

./: Cargo.toml  cases.md  cases.sh
cases/dep_feature_with_explicit_feature/: Cargo.toml
cases/dep_feature_with_explicit_feature/src/: main.rs
cases/dep_feature_with_implicit_feature/: Cargo.toml
cases/dep_feature_with_implicit_feature/src/: main.rs
cases/namespaced_dep/: Cargo.toml
cases/namespaced_dep/src/: main.rs
fixtures/dep_name/: Cargo.toml
fixtures/dep_name/src/: lib.rs
fixtures/unrelated/: Cargo.toml
fixtures/unrelated/src/: lib.rs
