[package]
name = "dep_feature_with_explicit_feature"
version = "0.1.0"
edition = "2021"

[features]
a = ["dep_name/feature_name"]
dep_name = ["dep:unrelated"]

[dependencies]
dep_name = { path = "../../fixtures/dep_name", optional = true }
unrelated = { path = "../../fixtures/unrelated", optional = true }
